--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                             <h4>My interests include mostly browsing tech related stuff, playing with my daughter, cooking and listening to Indian classical music !!</h4>
                                                 </div>
                                                 <div style="width:max-content;" class="step slide" data-rotate="-85" data-x="4000" data-y="3000" data-z="1000" data-scale="4"> 
-                                                    <h2>Kahoot + Youtube + medium</h2>
+                                                    <h2>Kahoot + Youtube + AI + VR/AR</h2>
                                                     <h3> One ecommerce idea!</h3>
                                                     <h3>But also open to other ideas</h3>
                                                         </div>
